--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>Hello Coursera Title</title>
+    <title>Hello Coursera</title>
 </head>
 <body>
-    <h1>Hello Coursera H1 toto</h1>
+    <h1>Hello Coursera</h1>
 </body>
