--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -1,19 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="NarrowItDownApp">
   <head>
     <title>Narrow Down Your Menu Choice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 <body>
-   <div class="container">
+   <div class="container" ng-controller="NarrowItDownController as nidCtrl">
     <h1>Narrow Down Your Chinese Menu Choice</h1>
 
     <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
+      <input ng-model="nidCtrl.searchTerm" type="text" placeholder="search term" class="form-control">
     </div>
-    <div class="form-group narrow-button">
+    <div ng-click="nidCtrl.narrowDown()" class="form-group narrow-button">
       <button class="btn btn-primary">Narrow It Down For Me!</button>
     </div>
 
