add button to remove items from list

--- a/assignment3/foundItems.html
+++ b/assignment3/foundItems.html
@@ -2,7 +2,8 @@
 
 <ul>
     <li ng-repeat="item in list.items">
-        <b>{{item.name}}</b> ({{item.short_name}}) <button class="btn btn-secondary">Don't want this one</button>
+        <b>{{item.name}}</b> ({{item.short_name}})
+        <button ng-click="list.removeItem($index);" class="btn btn-secondary">Don't want this one</button>
         <br/>
         <i>description: {{item.description}}</i>
     </li>
