--- a/assignment3/foundItems.html
+++ b/assignment3/foundItems.html
@@ -3,7 +3,7 @@
 <ul>
     <li ng-repeat="item in list.items">
         <b>{{item.name}}</b> ({{item.short_name}})
-        <button ng-click="list.removeItem($index);" class="btn btn-secondary">Don't want this one</button>
+        <button ng-click="list.onRemove({index: $index});" class="btn btn-secondary">Don't want this one</button>
         <br/>
         <i>description: {{item.description}}</i>
     </li>
