--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -20,7 +20,7 @@
     </div>
     <br/>
     <br/>
-    <found-items found="nidCtrl.menuItems"></found-items>
+    <found-items found="nidCtrl.menuItems" on-remove="nidCtrl.removeItem(index)"></found-items>
   </div>
 
 </body>
