start breaking into distinct files firstly the menudata service

--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -3,8 +3,19 @@
   <head>
     <title>Narrow Down Your Menu Choice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Libraries -->
     <script src="angular.min.js"></script>
+    
+    <!-- Modules -->
+    <script src="src/data/data.module.js"></script>
+
+    <!-- 'data' module artifacts -->
+    <script src="src/data/menudata.service.js"></script>
+
+    <!-- to remove sooner or later-->
     <script src="app.js"></script>
+
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
