some folder changes

--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Libraries -->
-    <script src="angular.min.js"></script>
+    <script src="libs/angular.min.js"></script>
     
     <!-- Modules -->
     <script src="src/data/data.module.js"></script>
@@ -14,7 +14,7 @@
     <script src="src/data/menudata.service.js"></script>
 
     <!-- to remove sooner or later-->
-    <script src="app.js"></script>
+    <script src="src/app.js"></script>
 
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
