--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" ng-app="data">
   <head>
-    <title>Narrow Down Your Menu Choice</title>
+    <title>Assignment 4 - Menu Categories</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Libraries -->
@@ -18,12 +18,13 @@
     <script src="src/data/menudata.service.js"></script>
     <script src="src/data/categories.component.js"></script>
     <script src="src/data/main-listofcategories.controler.js"></script>
+    <script src="src/data/categorycontent.controller.js"></script>
 
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 <body>
-    <h1>Welcome to the Restaurant (Assignment 4)</h1>
+    <h1>Assignment 4</h1>
 
     <ui-view></ui-view>
 
