--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -18,6 +18,7 @@
     <script src="src/data/menudata.service.js"></script>
     <script src="src/data/categories.component.js"></script>
     <script src="src/data/main-listofcategories.controler.js"></script>
+    <script src="src/data/categorycontent.component.js"></script>
     <script src="src/data/categorycontent.controller.js"></script>
 
     <link rel="stylesheet" href="styles/bootstrap.min.css">
