--- a/assignment5/src/public/signup/signup.html
+++ b/assignment5/src/public/signup/signup.html
@@ -1,15 +1,17 @@
-<div class="container">
+<div class="container" ng-controller="SignupController as formCtrl">
 
 <h1>Sign Up for the Newsletter (that will never come)</h1>
 
 <form name='signupForm' novalidate>
 
     <div class="form-group">
+        <label>First name:</label>
         <input type="text" name="firstname" placeholder="Enter your first name"
-        ng-model="reg.user.firstname"
+        ng-model="formCtrl.user.firstname"
         required
         minlength="2"
         ng-maxlength="20"
+        ng-init="formCtrl.user.firstname='Greg'"
         class="form-control">
         <span
           ng-if="(signupForm.firstname.$error.minlength || signupForm.firstname.$error.required) && signupForm.firstname.$touched">
@@ -22,11 +24,13 @@
     </div>
 
     <div class="form-group">
+        <label>Last name:</label>
         <input type="text" name="lastname" placeholder="Enter your last name"
-        ng-model="reg.user.lastname"
+        ng-model="formCtrl.user.lastname"
         required
         minlength="2"
         ng-maxlength="20"
+        ng-init="formCtrl.user.lastname='Cob'"
         class="form-control">
         {{ reg.user.lastname }}
         <span
@@ -42,9 +46,11 @@
     </div>
 
     <div class="form-group">
+        <label>E-mail:</label>
         <input type="email" name="email" placeholder="Enter your email"
-        ng-model="reg.user.email"
+        ng-model="formCtrl.user.email"
         required
+        ng-init="formCtrl.user.email='greg@cob.com'"
         class="form-control">
         <span ng-if="signupForm.email.$invalid && signupForm.email.$touched">
             Must be a valid email address: user@domain.com format
@@ -53,10 +59,12 @@
     </div>
 
     <div class="form-group">
+        <label>Phone number:</label>
         <input type="text" name="phone" placeholder="Phone ###-###-####"
-        ng-model="reg.user.phone"
+        ng-model="formCtrl.user.phone"
         pattern="(\d{3})-(\d{3})-(\d{4})"
         required
+        ng-init="formCtrl.user.phone='111-222-3333'"
         class="form-control">
         <span ng-if="signupForm.phone.$invalid && signupForm.phone.$touched">
         Phone must be in the US format ###-###-####.
@@ -65,11 +73,13 @@
     </div>
 
     <div class="form-group">
+        <label>Menu number:</label>
         <input type="text" name="menunumber" placeholder="Enter your favorite menu number (short name)"
-        ng-model="reg.user.menunumber"
+        ng-model="formCtrl.user.menunumber"
         required
         minlength="1"
         ng-maxlength="2"
+        ng-init="formCtrl.user.menunumber='V'"
         class="form-control">
         <span
         ng-if="(signupForm.menunumber.$error.minlength || signupForm.menunumber.$error.required || signupForm.menunumber.$error.maxlength) && signupForm.menunumber.$touched">
@@ -80,12 +90,13 @@
 
     <button
       ng-disabled="signupForm.$invalid"
-      ng-click="reg.submit()"
+      ng-click="formCtrl.submit()"
       class="btn btn-primary">Submit</button>
 
-      <div style="margin-top: 10px;">
-        Form valid? {{ signupForm.$valid }}
-      </div>
+      <span ng-if="formCtrl.invalidmenu" class="alert alert-warning">Cannot register: No such menu number exists.</span>
+
+      <span ng-if="formCtrl.completed" class="alert alert-success">Your information has been saved</span>
+
   </form>
 
 </div>
